# pocketsizefund

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  .python_coverage.output  .python_coverage.xml  .yamllint  AGENTS.md  CLAUDE.md  CNAME  Cargo.toml  Dockerfile.test  Dockerfile.tests  LICENSE.md  Makefile  README.md  amplify.yaml  amplify.yml  bacon.toml  compose.yaml  deny.toml  dockerfile  event_bus.py  flake.nix  index.html  jj-stack  kctl  linter.nu  maskfile.md  my_database.db  package.json  pipeline-deployment.yaml  pipelines.requirements.dev.in  pipelines.requirements.dev.txt  pipelines.requirements.in  pipelines.requirements.txt  platform.yaml  psf.py  pyproject.toml  pytest.ini  (+7 more)
application/accountmanager/: .dockerignore  Dockerfile  Dockerfile.test  compose.yaml  pyproject.toml
application/accountmanager/features/: account.feature  environment.py  health.feature
application/accountmanager/tests/: test_accountmanager_main.py
application/datamanager/: .dockerignore  Dockerfile  Dockerfile.test  compose.yaml  compose.yaml.bak  pyproject.toml
application/datamanager/features/: environment.py  equity_bars.feature  health.feature
application/datamanager/mock/: Dockerfile  server.py
application/datamanager/tests/: conftest.py  test_database.py  test_datamanager_main.py  test_datamanager_models.py  test_fetch.py  test_health.py  test_main.py
application/eventtrigger/: Dockerfile  pyproject.toml
application/eventtrigger/tests/: test_eventtrigger_main.py
application/positionmanager/: Dockerfile  compose.yaml  pyproject.toml
application/positionmanager/tests/: test_positionmanager_main.py
application/predictionengine/: Dockerfile  compose.yaml  pyproject.toml
application/predictionengine/tests/: test_dataset.py  test_gated_residual_network.py  test_long_short_term_memory.py  test_loss_function.py  test_multi_head_self_attention.py  test_post_processor.py  test_predictionengine_main.py  test_ticker_embedding.py
applications/accountreporter/: Cargo.toml  Dockerfile  compose.yaml
applications/datamanager/: Cargo.toml  Dockerfile  bacon.toml  compose.yaml  mise.toml  pyproject.toml
applications/equitypricemodel/: Dockerfile  pyproject.toml
applications/models/: Dockerfile  pyproject.toml
applications/portfoliomanager/: Dockerfile  pyproject.toml
builder/: Cargo.toml
builder/src/: main.rs
builder/src/system/: boot.rs  (+4 more)
edgar-feed/: Cargo.toml  deny.toml  tickers.json
edgar-feed/src/: lib.rs  main.rs  schema.sql
edgar-feed/tests/: health_check.rs
infrastructure/: .devenv.flake.nix  Cargo.toml  Dockerfile  Pulumi.dev.yaml  Pulumi.development.yaml  Pulumi.infrastructure.yaml  Pulumi.prod.yaml  Pulumi.production.yaml  Pulumi.yaml  Puppetfile  __main__.py  api.py  bolt-project.yaml  buckets.py  chat.py  cloud_run.py  cluster.py  compose.yaml  devenv.nix  docker-compose.yaml  environment_variables.py  go.mod  go.sum  grafana-dashboard.json  grafana_dashboard.json  images.py  index.ts  infrastructure.py  ingress.py  keys.py  main.go  main.nu  main.py  main.tf  monitoring.py  monitors.py  package-lock.json  package.json  parameters.py  ping.nu  (+17 more)
infrastructure/.claude/: settings.local.json
infrastructure/.devenv/: devenv.json  flake.json  profile  run
infrastructure/aws/: cluster-config.yaml  domain.tf  grafana.tf  main.tf  outputs.tf  s3.yaml  variables.tf
infrastructure/core/: Dockerfile  Pulumi.development.yaml  Pulumi.yaml  main.go
infrastructure/example-app/: Dockerfile  index.html
infrastructure/k8s/: knative.tf  main.tf  monitoring.tf  nats.tf  variables.tf
infrastructure/knative/: broker.yaml  event-display.yaml  eventing.yaml  prometheus.yaml
infrastructure/kubeflow/: Pulumi.kubeflow.yaml  Pulumi.yaml  go.mod  go.sum  main.go
infrastructure/local/: deploykf-app-of-apps.yaml  deploykf-values.yaml
infrastructure/plans/: eks.pp
infrastructure/platform/: chronos.yaml  datacollector.yaml  datafetcher.yaml  dataprovider.yaml  discord.yaml  discordbot.yaml  main.tf  metricsreporter.yaml  positionmanager.yaml  price-model.yaml  pricemodel.yaml  secrets.tf  tradeexecutor.yaml  variables.tf
infrastructure/src/: config.rs  lib.rs  main.rs  willa.txt
infrastructure/steps/: __init__.py
libraries/python/: pyproject.toml
libraries/rust/: Cargo.toml  deny.toml  ping
pkg/: Makefile  README.md  __init__.py  pyproject.toml
pkg/config/: config.py
pkg/data/: bar.py  data.py  test_data.py
pkg/features/: features.py  test_data.csv  test_features.py
pkg/id/: id.py  test_id.py
pkg/invite/: invite.py  test_invite.py
pkg/message/: message.py  test_message.py
pkg/model/: __init__.py  model.py  notes.md  test_data.csv  test_model.py
pkg/pocketsizefund/: data.py  storage.py
pkg/portfolio/: portfolio.py
pkg/source/: bar.py  source.py
pkg/storage/: storage.py  test_storage.py
pkg/tests/: test_trade.py
pkg/trade/: test_trade.py  trade.py
pkg/twitter/: test_twitter.py  twitter.py
pkg/users/: test_users.py  users.py
pkt/: pyproject.toml
pkt/pkt/: cli.py
platform/chronos/: Cargo.toml  Dockerfile  README.md  compose.yaml  manifest.yaml
platform/datacollector/: Cargo.toml  Dockerfile  compose.yaml  ping
platform/datafetcher/: Cargo.toml  Dockerfile  compose.yaml
platform/dataprovider/: Cargo.toml  Dockerfile  compose.yaml
platform/discord/: Cargo.toml  Dockerfile  README.md  compose.yaml  deny.toml  manifest.yaml
platform/discordbot/: .dockerignore  Cargo.toml  Dockerfile  compose.yaml  down  manifest.yaml  up
platform/metricsreporter/: Cargo.toml  Dockerfile  compose.yaml
platform/newsfeed/: Cargo.toml  Dockerfile  avro.ipynb  compose.yaml  deny.toml  manifest.yaml  test
pocket/: Cargo.toml
pocket/src/: main.rs  repo.rs  stuff.rs
workflows/: artifacts.py  backfill_datamanager.py  consolidate_data.py  fetch_data.py  launch_plans.py  prediction_model.py  pyproject.toml  requirements.txt  schema.py  tags  train_predictionengine.py
workflows/bars/: load.py  load.py~
workflows/flows/: daily_bars.py
workflows/schema/: polygon.py
workflows/tasks/: artifacts.py  dataframe.py
(+6155 files in other folders)
