[project]
name = "pocketsizefund"
version = "20250602.4"
description = "Open source quantitative hedge fund ðŸŠ"
requires-python = "==3.12.10"
dependencies = [
  "internal",
  "fastapi>=0.121.0",
  "uvicorn>=0.35.0",
  "structlog>=25.5.0",
  "sagemaker>=2.252.0",
  "numpy>=1.26.4",
  "tinygrad>=0.10.3",
  "requests>=2.32.5",
]

[tool.uv.sources]
internal = { workspace = true }

[tool.uv.workspace]
members = [
  "applications/portfoliomanager",
  "applications/equitypricemodel",
  "libraries/python",
  "infrastructure",
  "tools",
]

[dependency-groups]
dev = ["coverage>=7.8.0", "pytest>=8.3.5", "behave>=1.2.6"]

[tool.pytest.ini_options]
testpaths = ["applications/*/tests", "libraries/python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--verbose",
  "--tb=short",
  "--strict-markers",
  "--color=yes",
  "--rootdir=/tests",
]
filterwarnings = [
  "ignore::DeprecationWarning:websockets.legacy.*",
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
parallel = true
omit = ["*/__init__.py", "**/test_*.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage/.python.xml"

[tool.ruff.lint]
select = [
  "A",     # flake8 builtins
  "ANN",   # type annotations
  "ARG",   # unused args
  "ASYNC",
  "B",     # bugbear
  "COM",   # commas
  "C4",    # comprehensions
  "C90",   # complexity
  "BLE",   # no blind exceptions
  "DTZ",   # datetimes
  "E",     # whitespace
  "EM",    # error messages
  "ERA",   # dead code
  "EXE",   # executables
  "F",     # pyflakes
  "FA",    # future annotations
  "FAST",  # fastapi
  "FIX",   # no fixme/todo comments
  "FLY",   # f strings
  "FBT",   # boolean traps
  "FURB",  # refurb
  "G",     # logging format
  "ICN",   # import conventions
  "ISC",   # implicit string concatenation
  "I",     # isort
  "LOG",   # logging
  "N",     # naming
  "NPY",   # numpy
  "PD",    # pandas
  "PERF",  # performance
  "PIE",   # misc lints
  "PL",    # pylint
  "PLR",   # pylint refactor
  "PT",    # pytest style
  "PTH",   # use pathlib
  "PYI",   # type hints
  "Q",     # quotes
  "RSE",   # raises
  "RET",   # returns
  "RUF",   # ruff
  "S",     # bandit (security)
  "SIM",   # simplicity
  "SLF",   # self
  "SLOT",  # slots
  "TC",    # type checking
  "TID",   # tidy imports
  "TRY",   # trys
  "T10",   # debugger
  "T20",   # printing
  "UP",    # pyupgrade
  "YTT",   # flake8
]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]
"**/features/steps/**/*.py" = ["S101"]

[tool.ty.rules]
unresolved-import = "ignore"
invalid-return-type = "error"
invalid-argument-type = "error"
unresolved-reference = "error"

[tool.pyright]
reportMissingImports = "none"
