[package]
name = "edgar-feed"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
reqwest = "0.12.4"
serde = "1.0.203"
serde_json = "1.0.117"
shuttle-actix-web = "0.45.0"
shuttle-runtime = "0.45.0"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.4"
tokio = "1.26.0"
