[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[lib]
name = "infrastructure"
path = "src/lib.rs"

[[bin]]
name = "infrastructure"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.88"
k8s-openapi = { version = "0.22.0", features = ["v1_30"] }
kube = { version = "0.94.1", features = ["runtime"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await"] }
