[project]
name = "infrastructure"
version = "0.1.0"
description = "Infrastructure management with Pulumi"
requires-python = "==3.12.10"
dependencies = [
    "boto3>=1.40.31",
    "fabric>=3.2.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "structlog>=25.4.0",
    "tailscale>=0.6.2",
    "typer>=0.18.0",
]
