[package]
name = "pocket"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI for pocketsizefund"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
ignore = "0.4.22"
octocrab = "0.39.0"
qdrant-client = "1.10.3"
regex = "1.10.6"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tonic = "0.12.1"
trace = "0.1.7"
tracing = "0.1.40"
walkdir = "2.5.0"
