[project]
name = "workflows"
description = "Data and model workflows"
version = "0.1.0"
requires-python = "==3.12.10"
dependencies = [
    "flytekit>=1.10.0",
    "google-auth>=2.40.2",
    "google-cloud-run>=0.10.18",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "unionai>=0.1.183",
]

[tool.hatch.build.targets.wheel]
packages = ["workflows"]
