[project]
name = "accountmanager"
version = "0.1.0"
description = "Account management service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "alpaca-py>=0.15.0",
    "loguru>=0.7.3",
]

[tool.hatch.build.targets.wheel]
packages = ["accountmanager"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "behave>=1.2.6",
    "requests>=2.32.3",
]
