[project]
name = "datamanager"
version = "0.1.0"
description = "Data management service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "duckdb>=1.2.2",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "google-cloud-storage>=2.16.0",
    "httpx>=0.28.1",
    "datamanager"
]

[tool.hatch.build.targets.wheel]
packages = ["datamanager"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "behave>=1.2.6",
    "requests>=2.31.0",
]
