[project]
name = "datamanager"
version = "0.1.0"
description = "Data management service"
requires-python = "==3.12.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "duckdb>=1.2.2",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "loguru>=0.7.3",
    "requests>=2.31.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "cloudevents>=1.12.0",
    "polygon-api-client>=1.14.6",
    "boto3>=1.38.23",
]

[tool.hatch.build.targets.wheel]
packages = ["datamanager"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["behave>=1.2.6"]
