[project]
name = "eventtrigger"
version = "0.1.0"
description = "Event trigger service for scheduled HTTP requests"
requires-python = "==3.12.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "loguru>=0.7.3",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["eventtrigger"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
