[package]
name = "datamanager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
polars = { version = "0.50.0", features = ["json", "lazy", "parquet", "temporal"] }
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
aws-config = "1.5.8"
aws-sdk-s3 = "1.48.0"
duckdb = { version = "1.0", features = ["r2d2", "chrono"] }
