[package]
name = "datamanager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datamanager"
path = "src/main.rs"

[dependencies]
# axum = { version = "0.8.4", features = ["query"] }
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
polars = { version = "0.51.0", features = [
  "json",
  "lazy",
  "parquet",
  "temporal",
  "serde",
  "polars-io",
  "strings",
] }
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
urlencoding = "2.1.3"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
aws-config = "1.5.8"
aws-sdk-s3 = "1.48.0"
aws-credential-types = "1.2.6"
duckdb = { version = "1.0", features = ["r2d2", "chrono"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "2.0.3"

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
