[project]
name = "datamanager"
version = "0.1.0"
description = "Data management service"
requires-python = "==3.12.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "duckdb>=1.2.2",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "loguru>=0.7.3",
    "requests>=2.31.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "cloudevents>=1.12.0",
    "polygon-api-client>=1.14.6",
    "boto3>=1.38.23",
    "internal==0.1.0",
]

[dependency-groups]
dev = ["behave>=1.2.6", "httpx>=0.28.1"]

[tool.uv.sources]
internal = { workspace = true }
