[project]
name = "equitypricemodel"
version = "0.1.0"
description = "Equity price time-series dense encoder model architecture"
requires-python = "==3.12.10"
dependencies = [
  "internal>=0.1.0",
  "boto3>=1.35.0",
  "python-dotenv>=1.2.1",
  "sentry-sdk[fastapi]>=2.0.0",
  "structlog>=25.5.0",
  "tinygrad>=0.10.3",
  "numpy>=1.26.4",
]

[tool.uv.sources]
internal = { workspace = true }

[tool.uv]
package = true
src = ["src"]
