[project]
name = "models"
version = "0.1.0"
description = "Data and model tools and workflows"
requires-python = "==3.12.10"
dependencies = [
    "internal==0.1.0",
    "boto3>=1.38.23",
    "botocore>=1.38.23",
    "requests>=2.31.0",
    "pyarrow>=20.0.0",
    "polygon-api-client>=1.14.6",
    "internal==0.1.0",
]

[tool.uv.sources]
internal = { workspace = true }
