[tool.poetry]
name = "pocketsizefund"
version = "0.5.0"
description = "Open source quantitative trading"
authors = [
  "forstmeier <john.forstmeier@gmail.com>",
  "chrisaddy <chris.william.addy@gmail.com>",
]
license = "MIT"
homepage = "https://www.pocketsize.fund/"
repository = "https://github.com/pocketsizefund/pocketsizefund"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
loguru = "^0.7.2"
requests = "^2.31.0"
pytorch-forecasting = {version = "^1.0.0", optional = true}
wandb = {version = "^0.17.0", optional = true}
alpaca-py = "^0.21.1"
pandas = {version = "^2.2.2", optional = true}
lightning = {version = "^2.2.4", optional = true}
boto3 = "^1.34.108"
prefect = {version = "^2.19.1", optional = true}
llama-index = {version = "^0.10.40", optional = true}
flask = "^3.0.3"
kafka-python = "^2.0.2"
bs4 = "^0.0.2"
lxml = "^5.2.2"


[tool.poetry.extras]
pipelines = [
  "prefect",
]
ml-cpu = [
    "pandas",
    "pytorch-forecasting",
    "wandb",
    "lightning",
    "torchcpu",
]
ml-gpu = [
    "pandas",
    "pytorch-forecasting",
    "wandb",
    "lightning",
    "torchgpu",
]
trade = [
    "alpaca-py",
    "requests"
]


[tool.poetry.group.torchcpu.dependencies]
torch = { version = "^2.3.0", extras = ["cpu"] }

[tool.poetry.group.torchgpu.dependencies]
torch = "^2.3.0"

[tool.poetry.group.test.dependencies]
pytest-xdist = "^3.6.1"
coverage = "^7.5.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
