[project]
name = "pocketsizefund"
version = "20240831.0"
description = "Open source quantitative trading"
authors = [
  {name="forstmeier", email="john.forstmeier@gmail.com"},
  {name="chrisaddy", email="chris.william.addy@gmail.com"},
]
readme = "README.md"
homepage = "https://www.pocketsize.fund/"
repository = "https://github.com/pocketsizefund/pocketsizefund"
requires-python = ">=3.9, <3.11"
dependencies = [
    "loguru>=0.7.2",
    "requests>=2.32.3",
    "wandb>=0.17.8",
    "boto3>=1.35.10",
    "pandas>=2.2.2",
    "alpaca-py>=0.30.1",
    "bs4>=0.0.2",
]
license = {text = "MIT"}

[project.optional-dependencies]
trade = [
  "alpaca-py",
]
ml = [
  "pytorch-forecasting",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "pytest>=8.3.2",
]
