[project]
name = "internal"
version = "0.1.0"
description = "Shared Python resources"
requires-python = "==3.12.10"
dependencies = [
    "pydantic>=2.8.2",
    "cloudevents>=1.12.0",
    "tinygrad>=0.10.3",
    "numpy>=2.2.6",
    "polars>=1.29.0",
    "pandera[polars]>=0.26.0",
]

[tool.uv]
package = true
src = ["src"]
