[package]
name = "pocketsizefund"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
schema = ["dep:serde", "dep:serde_json"]
polygon = ["dep:reqwest"]
event = ["dep:rdkafka", "dep:uuid"]
llm = ["dep:reqwest"]

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
fmt = "0.1.0"
rdkafka = { version = "0.36.2", features = [
  "libz-static",
  "sasl",
  "ssl",
  "ssl-vendored",
], optional = true }
uuid = { version = "1.8.0", features = ["v4"] }
reqwest = { version = "0.12.5", optional = true }
rust_decimal = "1.35.0"
serde = { version = "1.0.204", features = ["derive"], optional = true }
serde_json = { version = "1.0.120", optional = true }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
color-eyre = "0.6.3"
tokio = { version = "1.38.1", features = ["full", "test-util"] }
