[package]
name = "pocketsizefund"
version = "0.1.6"
edition = "2021"
license = "MIT"

[lib]
name = "pocketsizefund"
path = "src/lib.rs"

[features]
events = ["dep:cloudevents-sdk", "dep:serde", "dep:serde_json"]
data = [
  "dep:serde",
  "dep:serde_json",
  "dep:aws-sdk-s3",
  "dep:aws-credential-types",
  "dep:aws-types",
  "dep:url",
  "dep:reqwest",
  "dep:flate2",
]
trade = ["dep:reqwest", "dep:serde", "dep:serde_json"]
web = ["dep:reqwest", "dep:tokio"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
reqwest = { version = "0.12.5", features = ["json", "default-tls"], optional = true }
serde = { version = "1.0.204", features = ["derive"], optional = true }
serde_json = { version = "1.0.120", optional = true }
tokio = { version = "1.38.1", features = [
  "macros",
  "rt-multi-thread",
  "tracing",
], optional = true }
tracing = { version = "0.1.40", features = ["async-await"] }
aws-sdk-s3 = { version = "1.42.0", features = [
  "behavior-version-latest",
], optional = true }
aws-credential-types = { version = "1.1.1", features = [
  "hardcoded-credentials",
], optional = true }
aws-types = { version = "1.1.1", optional = true }
url = { version = "2.2.2", optional = true }
flate2 = { version = "1.0", optional = true }
async-trait = "0.1.68"
cloudevents-sdk = { version = "0.7.0", features = [
  "actix-web",
  "reqwest",
], optional = true }
apca = "0.29.0"
mockall = "0.11"

[dev-dependencies]
tokio = { version = "1.38.1", features = ["full", "test-util"] }
mockito = "1.4.0"
regex = "1.9.3"
