[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
apca = "0.29.0"
chrono = "0.4.38"
cloudevents-sdk = { version = "0.7.0", features = ["actix", "reqwest"] }
env_logger = "0.11.5"
log = "0.4.22"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
cargo-machete = "0.6.2"
cargo-tarpaulin = "0.31.0"
lazy_static = "1.5.0"
