[package]
name = "chronos"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
env_logger = "0.11.5"
serde_json = "1.0.122"
tracing = { version = "0.1.40", features = ["async-await"] }
cloudevents-sdk = { version = "0.7.0", features = ["actix", "actix-web", "http-binding", "http-body", "reqwest"] }
actix-web = "4.9.0"
tokio = { version = "1.39.3", features = ["full"] }
pocketsizefund = { path = "../../libraries/rust", features = ["events", "web"] }

[dev-dependencies]
cargo-machete = "0.6.2"
lazy_static = "1.5.0"
reqwest = "0.12.7"
