[package]
name = "datacollector"
version = "202409.11.0"
edition = "2021"
license = "MIT"

[lib]
name = "datacollector"
path = "src/lib.rs"

[[bin]]
name = "datacollector"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
cloudevents-sdk = { version = "0.7.0", features = ["actix", "actix-http", "actix-web", "http-binding", "http-body", "reqwest"] }
serde_json = { version = "1.0.120" }
uuid = { version = "1.8.0", features = ["v4"] }
tracing = { version = "0.1.40", features = ["async-await"] }
mockall = "0.11"
async-trait = "0.1.82"
pocketsizefund = { version = "0.1.6", features = ["data"] }
env_logger = "0.11.5"
log = "0.4"
anyhow = { version = "1.0.89", features = ["backtrace"] }
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
cargo-machete = "0.6.2"
