[package]
name = "datafetcher"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4.9.0"
cloudevents-sdk = { version = "0.7.0", features = ["actix", "actix-http", "actix-web", "http-binding", "http-body", "reqwest"] }
log = "0.4"
pocketsizefund = { path = "../../libraries/rust", features = ["data", "events", "trade"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = { version = "1.0.120" }
env_logger = "0.11.5"
mockall = "0.11"
async-trait = "0.1.82"
