[package]
name = "dataprovider"
version = "202409.11.0"
edition = "2021"
license = "MIT"

[lib]
name = "dataprovider"
path = "src/lib.rs"

[[bin]]
name = "dataprovider"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
cloudevents-sdk = { version = "0.7.0", features = ["actix", "actix-http", "actix-web", "http-binding", "http-body", "reqwest"] }
serde_json = "1.0.120"
mockall = "0.11"
async-trait = "0.1.82"
uuid = { version = "1.8.0", features = ["v4"] }
tracing = { version = "0.1.40", features = ["async-await"] }
serde = { version = "1.0.204", features = ["derive"] }
env_logger = "0.11.5"
reqwest = { version = "0.12.8", features = ["default-tls", "json"] }
flate2 = "1.0.34"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
aws-config = { version = "1.5.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.53.0", features = ["behavior-version-latest"] }
aws-types = "1.3.3"
url = "2.5.2"
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
