[package]
name = "dataprovider"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = { version = "1.0.120" }
mockall = "0.11"
async-trait = "0.1.82"
tracing = { version = "0.1.40", features = ["async-await"] }
serde = { version = "1.0.204", features = ["derive"] }
pocketsizefund = { path = "../../libraries/rust", features = ["data", "events", "trade"] }
env_logger = "0.11.5"
