[package]
name = "discord"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.cargo-machete]
ignored = ["sasl2_sys"]


[dependencies]
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
