[package]
name = "discord"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.cargo-machete]
ignored = ["sasl2_sys"]


[dependencies]
actix-web = "4.9.0"
cloudevents-sdk = { version = "0.7.0", features = [
	"actix",
	"actix-web",
	"reqwest",
] }
env_logger = "0.11.5"
pocketsizefund = { path = "../../libraries/rust", features = ["events", "web"] }
reqwest = "0.12.7"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await"] }
url = { version = "2.5.2", features = ["serde"] }
