[package]
name = "discordbot"
version = "1.0.0"
edition = "2021"
license = "MIT"

[package.metadata.cargo-machete]
ignored = ["sasl2_sys"]

[dependencies]
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.43.1", features = ["rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["async-await"] }
env_logger = "0.11.5"
actix-web = "4.9.0"
cloudevents-sdk = { version = "0.7.0", features = ["actix", "actix-http", "actix-web", "http-binding", "http-body", "reqwest"] }
reqwest = "0.12.7"
url = "2.5.2"
pocketsizefund = { path = "../../libraries/rust", features = ["data", "events"] }
